# shallot-stdlib

./: Cargo.toml
src/: lib.rs  main.rs
